host-filesystem/podfile-deny-allowedhostpaths.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pause-host-filesystem
  labels:
    app: pause-host-filesystem
spec:
  containers:
  - name: pause
    image: k8s.gcr.io/pause
    volumeMounts:
    - mountPath: /tmp
      name: tmp-vol
      readOnly: true #mandatory with AllowedHostPaths
  volumes:
  - name: tmp-vol
    hostPath:
      path: /tmp
